--- a/index.html
+++ b/index.html
@@ -1,6 +1,110 @@
-<html>
-  <body>
-    <h1>Welcome to my website!</h1>
-    <p>This is my first GitHub Pages site.</p>
-  </body>
+<!DOCTYPE html><html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Simple Website</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      line-height: 1.6;
+      background-color: #f4f4f4;
+      color: #333;
+    }header {
+  background: #4a90e2;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  background: #333;
+}
+
+nav a {
+  color: #fff;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+nav a:hover {
+  background: #555;
+}
+
+.container {
+  padding: 20px;
+  max-width: 1000px;
+  margin: auto;
+  background: #fff;
+}
+
+section {
+  margin-bottom: 40px;
+}
+
+h2 {
+  color: #4a90e2;
+  margin-bottom: 10px;
+}
+
+footer {
+  text-align: center;
+  padding: 15px;
+  background: #333;
+  color: #fff;
+}
+
+/* Simple Mobile Responsiveness */
+@media (max-width: 600px) {
+  nav {
+    flex-direction: column;
+  }
+
+  nav a {
+    text-align: center;
+    border-top: 1px solid #444;
+  }
+}
+
+  </style>
+</head>
+<body>  <!-- Homepage -->  <header id="home">
+    <h1>Welcome to My Website</h1>
+    <p>A simple responsive website example</p>
+  </header>  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>  <div class="container">
+    <!-- About Section -->
+    <section id="about">
+      <h2>About</h2>
+      <p>
+        This website is created as a basic example project. It demonstrates a
+        clear homepage, multiple sections, simple styling, and mobile-friendly
+        design.
+      </p>
+    </section><!-- Projects Section -->
+<section id="projects">
+  <h2>Projects</h2>
+  <ul>
+    <li>Project 1 – Sample Website</li>
+    <li>Project 2 – Simple Web App</li>
+    <li>Project 3 – Student Portfolio</li>
+  </ul>
+</section>
+
+<!-- Contact Section -->
+<section id="contact">
+  <h2>Contact</h2>
+  <p>If you have questions, feel free to reach out.</p>
+  <p>Email: example@email.com</p>
+</section>
+
+  </div>  <footer>
+    <p>&copy; 2026 My Simple Website</p>
+  </footer></body>
 </html>
